# decaf

./: .gitignore  CMakeLists.txt  COPYING  Doxyfile  Home.md  README  README.md  UseCython.cmake  compile.sh  generator.sh  install_decaf_linux.sh  repo.yaml
bindings/python/: CMakeLists.txt  py-bredala.cpp  py-decaf.cpp
doc/: comm.md  (+10 more)
examples/: CMakeLists.txt  DIRECT_TEST  DIRECT_TEST_NO_OVERLAP  DIRECT_TEST_TOTAL_OVERLAP  RUN_DIRECT  datatypes.cpp  direct.cpp
examples/C/: CMakeLists.txt  CYCLE_4NODES_TEST  LINEAR_2NODES_TEST  LINEAR_3NODES_TEST  REDIST_TEST  cycle_4nodes_c.c  dflow.cpp  linear_2nodes_c.c  linear_3nodes_c.c  redistbca.c  simplebca.c
examples/C/mpmd/: CMakeLists.txt  LINEAR_2NODES_TEST  con.cpp  dflow.cpp  prod_c.c  wflow.hpp
examples/block_data_model/: BLOCKDATAMODEL  CMakeLists.txt  arrayconstructdata.hpp  arraytetsdata.hpp  bboxconstructData.hpp  block_data_model.cpp  tetcounterdata.hpp  verttotetdata.hpp
examples/bredala/: BLOCK_TEST  CMakeLists.txt  COUNT_TEST  test2Count.cpp  testBlock.cpp  testBoost.cpp  testProc.cpp  testRound.cpp  testSerialization.cpp  testZCurve.cpp  testmem.cpp
examples/bredala/old/: testFFS.cpp
examples/buffer/: CMakeLists.txt  buffer-2nodes-nolink.py  buffer-2nodes.py  con.cpp  dflow.cpp  prod.cpp  simple_onesided.cpp
examples/cfd/: CFD_REDIST_TEST  CFD_TEST  CMakeLists.txt  cfd.cpp  cfd_kernel.cpp  cfd_redist.cpp
examples/cfd/python/: CMakeLists.txt  driver-no-overlap.py  driver-partial-overlap.py  driver-redist-no-overlap.py  driver-redist-partial-overlap.py  driver-redist-total-overlap.py  driver-total-overlap.py  driver.pyx  driver_redist.pyx
examples/contract/: CMakeLists.txt  contract.cpp  contract.py  contract_index.cpp  contract_index.py  contract_link.cpp  contract_link.py  contract_ports.cpp  contract_ports.py  conversion.cpp  conversion.py  errors.cpp  errors.py  period_3nodes.cpp  period_3nodes.py  period_link.cpp  period_link.py  putget_index.cpp  putget_index.py  simple_2nodes.cpp  simple_2nodes.py  test_object.cpp  test_object.py
examples/contract/mini_tests/: CMakeLists.txt  mini1.cpp  mini1.py  mini2.cpp  mini2.py  mini3.cpp  mini3.py  test_object.py
examples/datatypes/: CMakeLists.txt  DATATYPE_TEST  datatypes.cpp
examples/datatypes/python/: CMakeLists.txt  driver.py  driver.pyx
examples/direct/: CMakeLists.txt  CYCLE_4NODES_TEST  ConstructType.hpp  DIRECT_REDIST_TEST  DIRECT_TEST  DIRECT_TEST_NO_OVERLAP  DIRECT_TEST_PARTIAL_OVERLAP  DIRECT_TEST_TOTAL_OVERLAP  LINEAR_2NODES_TEST  LINEAR_3NODES_TEST  LINEAR_3_NODES_TEST  contract.cpp  contract.py  cycle-4nodes.py  cycle_4nodes.cpp  direct.cpp  direct_redist.cpp  linear-2nodes-cci.py  linear-2nodes-contract-topo.py  linear-2nodes-contract.py  linear-2nodes-file.py  linear-2nodes-test-topo.py  linear-2nodes-test.py  linear-2nodes-topo.py  linear-2nodes-topo1.py  linear-2nodes-topo2.py  linear-2nodes-topo3.py  linear-2nodes.py  linear-3nodes-file.py  linear-3nodes.py  linear_2nodes.cpp  linear_2nodes_test.cpp  linear_3_nodes.cpp  linear_3nodes.cpp  my_test.cpp  my_test.py  py_direct.pyx
examples/flowvr/: CMakeLists.txt
examples/gromacs/: CMakeLists.txt  FEPA_TEST  FEPA_TEST_DECAF_ONLY  FEPA_TEST_GROMACS_ONLY  GROMACS_TEST  decaf_grid.xml  dflow.cpp  fepa_flowvr.py  fepa_workflow_decaf_only.py  fepa_workflow_gromacs_only.py  gromacs_workflow.py  gromacs_workflow_no_link.py  launch_test.sh  launch_test_gdb.sh  patch_gromacs.txt  patch_gromacs_4.5.5.txt  prod_c.c  rankfile.txt  rankfile_helper.txt  save_logs.py  targetmanager.cpp  treatment.cpp  wflow_gromacs.hpp  wflow_gromacs.json
examples/hacc/: CMakeLists.txt  HACC_TEST  dense.cpp  dflow.cpp  dflow1.cpp  prod.cpp  tess.cpp  wflow.hpp
examples/include/: ConstructType.hpp
examples/lammps/: CMakeLists.txt  LAMMPS_REDIST_TEST  LAMMPS_TEST  in.melt  lammps-4nodes.py  lammps.cpp  lammps_redist.cpp
examples/lammps-workflow/: LAMMPS_TEST  lammps.cpp
examples/manala/: CMakeLists.txt  buffer-2nodes.py  buffer.h  con.cpp  dflow.cpp  filereader.cpp  prod.cpp  reader-2nodes.py
examples/ports/: CMakeLists.txt  ports.cpp  ports.py
examples/python/: CMakeLists.txt  con.py  linear-2nodes.py  prod.py
examples/redist/: BLOCK_TEST  CMakeLists.txt  COUNT_TEST  ConstructType.hpp  DIRECT_TEST  PROC_TEST  REDISTBOOST  REDISTFFS  TESTBOOST  TESTFFS  TESTNARRAY  TESTROUND  TESTZCURVE  redist.cpp  redist_boost.cpp  test2Count.cpp  testArrayNDim.cpp  testBlock.cpp  testBlock.cpp.autosave  testBoost.cpp  testFFS.cpp  testProc.cpp  testRound.cpp  testZCurve.cpp
examples/small_tests/: CMakeLists.txt  contract_link.cpp  contract_link.py  conversion.cpp  conversion.py  period_link.py
examples/tess_dense/: CMakeLists.txt  TESS_DENSE_TEST  bgq_mapfile  bgq_run.py  block_serialization.hpp  dense-plot.py  dense.cpp  dflow.cpp  dflow1.cpp  dflow2.cpp  full.cpp  plot.sh  prod.cpp  tess.cpp  tess_dense.py  tess_dense.py.save  wflow.hpp  wflow.json
examples/test/: CMakeLists.txt  testFFS.cpp
src/C/: CMakeLists.txt  bredala.cpp  cdecaf.cpp
src/data_model/: CMakeLists.txt  constructtype.cpp  maptools.cpp  morton.cpp
src/decaf/: CMakeLists.txt  dataflow.cpp  decaf.cpp  tools.cpp  workflow.cpp
src/manala/: CMakeLists.txt  datastreamdoublefeedback.cpp  datastreaminterface.cpp  datastreamsinglefeedback.cpp  datastreamsinglenolink.cpp  framemanager.cpp  framemanagerlowhigh.cpp  framemanagermostrecent.cpp  framemanagersequential.cpp  storagecollectionLRU.cpp  storagecollectiongreedy.cpp  storagecollectioninterface.cpp  storagefile.cpp  storagemainmemory.cpp  tools.cpp
tests/: CMakeLists.txt  EMPTY_TEST  OVERFLOW_COUNT_TEST  OVERFLOW_ROUND_TEST  ZCURVE_TEST  test2Count.cpp  testBlock.cpp  testBlockCCI.cpp  testBlockFile.cpp  testBoost.cpp  testCCI.cpp  testCount.cpp  testCountCCI.cpp  testCountFile.cpp  testCountOverflow.cpp  testEmptyMessage.cpp  testProc.cpp  testProcCCI.cpp  testProcFile.cpp  testRound.cpp  testRoundCCI.cpp  testRoundFile.cpp  testRoundOverflow.cpp  testSerialization.cpp  testZCurve.cpp  testmem.cpp  tools.hpp
tests/old/: redist.cpp
tests/toUpdate/: redist_boost.cpp  testArrayNDim.cpp
(+687 files in other folders)
